--- a/Backend/TuanTech-PC-Store-Backend/src/main/resources/application.properties
+++ b/Backend/TuanTech-PC-Store-Backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=TuanTech-PC-Store-Backend
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TuanTechPCStoreDB;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=tuan2407
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
