--- a/Backend/TuanTech-PC-Store-Backend/src/main/resources/application.properties
+++ b/Backend/TuanTech-PC-Store-Backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=TuanTech-PC-Store-Backend
 
+file.upload-dir=D:/STUDY/TUTORIAL/JAVA/Resume-Project/TuanTech PC Store Project/TuanTech-PC-Store/Images
+
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TuanTechPCStoreDB;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=tuan2407
